--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -391,6 +391,26 @@
     "backupWalletDatNotice": "Your wallet is not ready yet. Do you want to backup your wallet.dat file?",
     "yesBackupWalletNotice": "Yes",
     "noBackupWalletNotice": "No",
+    "encryptWalletNoticeTitle": "Lock Wallet",
+    "encryptWalletNotice": "Enabling wallet locking with a passphrase is recommended for security. Enter the passphrase which you will use to unlock your wallet.",
+    "enableLocking": "ENABLE LOCKING",
+    "later": "LATER",
+    "passphraseLabel": "Enter passphrase",
+    "proceed": "PROCEED",
+    "reset": "RESET",
+    "encryptWalletSuccess": "Encrypt wallet done successfully",
+    "unlockWalletSuccess": "Unlock wallet done successfully",
+    "lockWalletSuccess": "Lock wallet done successfully",
+    "passphraseLabelConfirm": "Confirm passphrase",
+    "confirm": "CONFIRM",
+    "cancel": "CANCEL",
+    "unlock": "UNLOCK",
+    "enterYourPassphrase": "Enter your passphrase",
+    "walletUnlockTitle": "Welcome back",
+    "walletUnlockMessage": "Enter your passphrase to unlock your wallet.",
+    "lostPassphraseMessage": "I LOST MY PASSPHRASE",
+    "saveMyBackup": "Save my backup",
+    "okIHaveDoneIt": "Ok, I have done it",
     "backupWalletWarningModelHeader": "Wallet backup warning",
     "backupNow": "Backup now",
     "skipBackup": "Skip backup",
