Feature/implement token listing ui (#1)
* Fix graying of send button

* Called exit app after installing the app update

* Added branch "bug-fixes/electron-app-update-windows" in push event of github action

* Updated version to test "app update on windows"

* Updated logic for auto update electron app

* Updated branch names for push and pull_request events

* Removed commented code

* Reset version to "1.0.0-alpha3"

* Removed develop branch tag for push event

* Updated version to "1.0.0-alpha4"

* Added bug-fixes branch to push event for testing

* Updated publish info for testing

* Changed hide to minimize for main window

* Removed "bug-fixes/payment-request-disapper-windows" branch from push event

* Reset publish github info

* Add a feature to restart a node with new masternode config when someone creates a new masternode

* Add feature to restart node with kill queue

* Add success label in I18n

* Add checks for electron app restart and queue kill

* Remove yaml file to fetch and save configuration, only use defi.conf as single source of configuration data

* Updated logic to add new masternode operator

* WIP: show resign node to wallet which has owner address

* Add a feature to check if masternode owner is associated with your wallet

* Add updated snapshot

* Add masternode setMasternode action reducer test

* Add saga test case for fetchMasterNodes, createMasterNode, resignMasterNode and checkMasternodeOwner features

* Fix TestData and testcases

* WIP: update the saga.test file with test case of restart node

* Fix saga check for createmasternode and add new transalation for electron error

* WIP: Splash loader is added

* Add react md spinner in splash loader screen

* Fix styles of color

* Replace all loader with new loader design

* WIP paginate masternode list

* Add pagination on masternode list

* Add pagination token for receive transaction

* Add a logic to disable pa

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -21,6 +21,7 @@
       "wallet": "Brieftasche",
       "masterNodes": "Masterknoten",
       "blockchain": "Blockchain",
+      "tokens": "Zeichen",
       "exchange": "Austausch",
       "help": "Helfen",
       "settings": "Einstellungen",
@@ -160,6 +161,140 @@
       "masternodeTab": {
         "myMasternodes": "Bergwerk",
         "network": "Netzwerk"
+      }
+    },
+    "tokens": {
+      "tokensPage": {
+        "title": "Tokens – DeFi Blockchain Client",
+        "loading": "Loading...",
+        "createToken": "Create",
+        "tokens": "Tokens",
+        "searchTokens": "Search Tokens",
+        "dat": "DAT",
+        "dct": "DCT",
+        "paginationRange": "%{from} – %{to} of %{total} tokens",
+        "datLabels": {
+          "type": "Type",
+          "price": "Price",
+          "volume": "Volume (24H)",
+          "marketCap": "Market Cap",
+          "holders": "Holders",
+          "decimal": "Decimal",
+          "limit": "Limit",
+          "mintingSupport": "Minting Support",
+          "tradeable": "Tradeable"
+        },
+        "dctLabels": {
+          "id": "ID",
+          "totalInitialSupply": "Total initial supply",
+          "finalSupplyLimit": "Final supply limit",
+          "mintingSupport": "Minting Support",
+          "tradeable": "Tradeable",
+          "type": "Type",
+          "decimal": "Decimal",
+          "limit": "Limit"
+        }
+      },
+      "createToken": {
+        "back": "BACK",
+        "yes": "Yes",
+        "no": "No",
+        "cancel": "CANCEL",
+        "continue": "CONTINUE",
+        "createTitle": "Create Token",
+        "updateTitle": "Update DCT (DeFi Custom Token)",
+        "name": "Name of token",
+        "symbol": "Ticker Symbol",
+        "decimal": "Decimal",
+        "decimalText": "Number of decimal places. Cannot be changed once set.",
+        "limit": "Limit",
+        "mintingSupport": "Minting support?",
+        "mintText": "You can mint tokens after it has been created.",
+        "optionalFinalSupplyLimit": "Final supply limit (optional)",
+        "optionalFinalSupplyLimitText": "Immutable total supply limit. Leave blank for unlimited supply. Cannot be changed once set.",
+        "tradeable": "Trade-able?",
+        "dfiRequired": "DFI required",
+        "collateralAddress": "Collateral Address",
+        "collateralAddressError": "Minimum 100 DFI is required",
+        "createTokenButton": "CREATE TOKEN",
+        "createConfirmationText": "Are you sure you want to create a token?",
+        "updateConfirmationText": "Are you sure you want to update a token?",
+        "createTokenSuccess": "Token is Created Successfully",
+        "updateTokenSuccess": "Token is Updated Successfully",
+        "tokenHash": "Token Hash",
+        "backToTokenPage": "Back To Token Page",
+        "updateTokenButton": "UPDATE TOKEN"
+      },
+      "tokenInfo": {
+        "back": "BACK",
+        "name": "Name",
+        "symbol": "Symbol",
+        "type": "Type",
+        "price": "Price",
+        "id": "ID",
+        "decimals": "Decimals",
+        "holders": "Holders",
+        "limit": "Limit",
+        "minitingSupport": "Minting Support",
+        "tradeable": "Trade-able?",
+        "marketCap": "Market Cap",
+        "volume": "Volume (24 H)",
+        "officialSite": "Official site",
+        "transfers": "Transfers",
+        "holders": "Holders",
+        "info": "Info",
+        "exchange": "Exchange",
+        "dex": "DEX",
+        "readContract": "Read Contract",
+        "writeContract": "Write Contract",
+        "analysis": "Analysis",
+        "comments": "Comments",
+        "noButtonText": "Cancel",
+        "yesButtonText": "Continue",
+        "successText": "Success",
+        "backToTokenPage": "Back to Token Page",
+        "confirmation": "Are you sure you want to destroy a token?",
+        "deleteToken": "Delete Token",
+        "editToken": "Edit Token",
+        "mint": "Mint",
+        "notMintedAlert": "You have not minted the token",
+        "mint": "Mint"
+      },
+      "mintToken": {
+        "title": "Mint",
+        "back": "BACK",
+        "amountToMint": "Amount to Mint",
+        "amount": "Amount",
+        "cancel": "Cancel",
+        "continue": "continue",
+        "pleaseVerifyAmount": "Please Verify Amount",
+        "completeMint": "Complete Mint",
+        "transactionSuccessMsg": "The transaction was a success. Your token balance will update once the transaction has been confirmed by the DeFi Blockchain.",
+        "backToToken": "Back to Tokens"
+      },
+      "transfersList": {
+        "txnHash": "Txn Hash",
+        "age": "Age",
+        "from": "From",
+        "to": "To",
+        "amount": "Amount"
+      },
+      "dctDistribution": {
+        "back": "BACK",
+        "add": "ADD",
+        "cancel": "CANCEL",
+        "continue": "CONTINUE",
+        "dfiRequired": "DFI required",
+        "chooseFile": "CHOOSE FILE",
+        "dctDistribution": "DCT Distribution",
+        "uploadCsv": "UPLOAD CSV",
+        "addAddress": "ADD ADDRESS",
+        "address": "Address",
+        "addAddressesText": "Add addresses to your initial distribution list.",
+        "enterDfiAddress": "Enter DFI address",
+        "dragAndUploadCSV": "Drag or choose a CSV file to upload.",
+        "verifyingCollateral": "Verifying Collateral",
+        "chooseFile": "Choose File"
       }
     },
     "settings": {
