--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -214,7 +214,12 @@
       "poolTab": {
         "yourLiquidity": "Your liquidity",
         "noLiquidity": "No liquidity found. Would you like to add liquidity to the pool?",
-        "addLiquidity": "ADD LIQUIDITY"
+        "addLiquidity": "ADD LIQUIDITY",
+        "availablePoolPairs": "Available Pool Pairs",
+        "pair": "Pair",
+        "liquidity": "Liquidity",
+        "volume": "Volume",
+        "apy": "APY"
       },
       "addLiquidity": {
         "balance": "Balance",
@@ -247,7 +252,8 @@
         "none": "None",
         "all": "All",
         "back": "BACK",
-        "continue": "CONTINUE"
+        "continue": "CONTINUE",
+        "receiveAddress": "Receive Address"
       }
     },
     "tokens": {
