Added language translation for the changes done

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -27,13 +27,15 @@
       "balance": "Balance",
       "dfi": "DFI",
       "wallet": "Brieftasche",
+      "dex": "DEX",
       "masterNodes": "Masterknoten",
       "blockchain": "Blockchain",
       "tokens": "Zeichen",
       "exchange": "Austausch",
       "help": "Helfen",
       "settings": "Einstellungen",
-      "console": "Konsole"
+      "console": "Konsole",
+      "liquidity": "Liquidity"
     },
     "blockChainPage": {
       "blockChainPage": {
@@ -171,9 +173,25 @@
         "network": "Netzwerk"
       }
     },
+    "liquidity": {
+      "liquidityPage": {
+        "title": "Liquidity – DeFi Blockchain Client",
+        "yourLiquidity": "Your liquidity",
+        "noLiquidity": "No liquidity found. Would you like to add liquidity to the pool?",
+        "addLiquidity": "ADD LIQUIDITY",
+        "availablePoolPairs": "Available Pool Pairs",
+        "pair": "Pair",
+        "liquidity": "Liquidity",
+        "addLiquidity": "Add Liquidity",
+        "liquidityPools": "Liquidity pools",
+        "volume": "Volume",
+        "apy": "APY"
+      }
+    },
     "swap": {
       "swapPage": {
         "title": "Tokens – DeFi Blockchain Client",
+        "decentralisedExchange": "Decentralised Exchange",
         "swap": "Swap",
         "pool": "Pool",
         "liquidity": "Liquidity",
