Added language translations

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -312,10 +312,15 @@
     "liquidity": {
       "liquidityPage": {
         "title": "Liquidity – DeFi Blockchain Client",
-        "yourLiquidity": "Your liquidity",
+        "yourLiquidity": "Your Liquidity",
+        "yourLiquidityInfo": "You can now liquidity mine for upto 300% APY. Pick a pool pair below, supply liquidity to power the DEX (Decentralised Exchange) to start earning fees and anual returns of up to 300%. Withdraw any time.",
         "noLiquidity": "No liquidity found. Would you like to add liquidity to the pool?",
+        "loading": "Loading...",
+        "watchVideo": "Watch Video",
         "addLiquidity": "ADD LIQUIDITY",
         "availablePoolPairs": "Available Pool Pairs",
+        "noPoolPairs": "No Pool Pairs",
+        "loading": "Loading..",
         "pair": "Pair",
         "liquidity": "Liquidity",
         "addLiquidity": "Add Liquidity",
@@ -349,6 +354,7 @@
         "liquidityProviderFee": "Liquidity provider fee",
         "verifyTransactionSwap": "Please verify transaction and press SWAP",
         "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by the Defi blockchain",
+        "transactionComplete": "Transaction Complete",
         "goToWallet": "Go to Wallet",
         "go": "Go",
         "ok": "OK",
