--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -88,12 +88,21 @@
     "helpPage": {
       "title": "Help – DeFi Blockchain Client",
       "help": "Help",
+      "helpPageHeader": "Connect with the community with these options:",
       "telegramEn": "Telegram community (EN)",
+      "telegramEnLink": "t.me/defiblockchain_DE",
       "telegramDe": "Telegram community (DE)",
+      "telegramDeLink": "t.me/defiblockchain",
       "github": "Report an Issue",
+      "githubLink": "github.com",
       "faq": "Frequently-Asked Questions",
+      "faqLink": "defichain.com/learn/#faq",
       "defichainsite": "Official website",
-      "reddit": "Reddit community"
+      "defichainsiteLink": "defichain.com",
+      "reddit": "Reddit community",
+      "redditLink": "reddit.com/r/defiblockchain",
+      "helpTextFooterLine1": "DeFiChain is a community-driven and open project.",
+      "helpTextFooterLine2": "The DeFiChain Foundation does not provide direct support."
     },
     "masterNodes": {
       "masterNodesPage": {
