--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -90,9 +90,9 @@
       "help": "Help",
       "helpPageHeader": "Connect with the community with these options:",
       "telegramEn": "Telegram community (EN)",
-      "telegramEnLink": "t.me/defiblockchain_DE",
+      "telegramEnLink": "t.me/defiblockchain",
       "telegramDe": "Telegram community (DE)",
-      "telegramDeLink": "t.me/defiblockchain",
+      "telegramDeLink": "t.me/defiblockchain_DE",
       "github": "Report an Issue",
       "githubLink": "github.com",
       "faq": "Frequently-Asked Questions",
