11 changes made to en.json (#31)

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -130,12 +130,12 @@
         "loading": "Loading..."
       },
       "createMasterNode": {
-        "title": "Create Master Node",
-        "masterNodeName": "MasterNode Name",
-        "lackOfBalanceMsg": "Unable to create masternode due to lack of funds. Minimum 1 million DFI is required to create master node",
-        "confirmationText": "Are you sure you want to create a master node?",
+        "title": "Create Masternode",
+        "masterNodeName": "Masternode Name",
+        "lackOfBalanceMsg": "Unable to create masternode due to lack of funds. Minimum 1 million DFI is required to create masternode",
+        "confirmationText": "Are you sure you want to create a masternode?",
         "restartNodeConfirmationText": "Are you sure you want to restart a node?",
-        "createNodeButton": "Create Master Node",
+        "createNodeButton": "Create Masternode",
         "noButtonText": "Cancel",
         "yesButtonText": "Continue",
         "masternodeOperator": "Masternode Operator",
@@ -164,7 +164,7 @@
         "banHeight": "Ban Height",
         "banTx": "Ban Tx",
         "resignMasterNode": "Resign",
-        "confirmation": "Are you sure you want to resign a master node?",
+        "confirmation": "Are you sure you want to resign a masternode?",
         "noButtonText": "Cancel",
         "yesButtonText": "Continue",
         "successText": "Success",
@@ -281,7 +281,7 @@
         "continue": "continue",
         "pleaseVerifyAmount": "Please Verify Amount",
         "completeMint": "Complete Mint",
-        "transactionSuccessMsg": "The transaction was a success. Your token balance will update once the transaction has been confirmed by the DeFi Blockchain.",
+        "transactionSuccessMsg": "Transaction successful. Your token balance will update once the transaction has been confirmed by the DeFi Blockchain.",
         "backToToken": "Back to Tokens"
       },
       "transfersList": {
@@ -474,7 +474,7 @@
         "back": "BACK",
         "title": "Wallet - Create a new wallet",
         "createANewWallet": "Create a new wallet",
-        "mnemonicGuideline": "Write down the following 24 words below. It is important to write them down in the exact order as displayed. This 24 - word mnemonic seed will be used to recover or transfer your wallet. Without it, you will not be able to recover your wallet. Don't lose it.",
+        "mnemonicGuideline": "Write down the following 24 words below. It is important to write them down in the exact numbered order. This 24-word mnemonic seed will be used to recover or transfer your wallet. Without it, you will not be able to recover your wallet. Don't lose it.",
         "generateNewSet": "Generate a new set of 24 words",
         "copied24Words": "I've have copied down 24 words in the exact order",
         "continue": "CONTINUE",
@@ -484,7 +484,7 @@
         "back": "BACK",
         "title": "Wallet - Verify mnemonic seed",
         "verifyMnemonicSeed": "Verify mnemonic seed",
-        "verifyMnemonicGuideline": "To ensure you have written down your 24-word mnemonic seed, please pick out 6 of the words in your mnemonic seed, in the list below.",
+        "verifyMnemonicGuideline": "To ensure you have written down your 24-word mnemonic seed, please identify which 6 words are in your mnemonic seed.",
         "showAgain": "Show me my 24 words again",
         "creatingYourWallet": "Creating your wallet",
         "backToWalletPage": "CLOSE"
@@ -515,8 +515,8 @@
         "to": "To",
         "pleaseVerifyAmount": "Please verify the amount and recipient",
         "completeSend": "Complete Send",
-        "sendFailed": "Error ocurred while sending amount",
-        "transactionSuccessMsg": "The transaction was a success. Your wallet balance will update once the transaction has been confirmed by the DeFi Blockchain.",
+        "sendFailed": "Error occurred while sending amount",
+        "transactionSuccessMsg": "Transaction successful. Your wallet balance will update once the transaction has been confirmed by the DeFi Blockchain.",
         "backToWallet": "Back to wallet",
         "dfiAddress": "DFI Address",
         "pleaseTransferFunds": "Please transfer some DFIs to your account"
