--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -365,7 +365,11 @@
         "title": "Wallet - Create a new wallet",
         "createANewWallet": "Create a new wallet",
         "mnemonicGuideline": "Write down the following 24 words below. It is important to write them down in the exact order as displayed. This 24 - word mnemonic seed will be used to recover or transfer your wallet. Without it, you will not be able to recover your wallet. Don't lose it.",
+        "mnemonicGuidelineWarning": "Do not store your wallet receovery phrase on a computer or smartphone, and keep it secure.",
         "generateNewSet": "Generate a new set of 24 words",
+        "walletRecoveryInfoLine1": "A wallet recovery seed (“mnemonic seed”, “seed phrase”, “seed words”) is a way to represent your private key as a sequence of words that are easier for a human to remember. It is also used to generate extended keys for all the wallets you create in the app.",
+        "walletRecoveryInfoLine2": "The words are randomly-generated from a list of 2048 words defined in the BIP39 standard, and provides 24 bit of safety.",
+        "learnMoreAtBitcoinBtn": "LEARN MORE AT BITCOIN WIKI",
         "copied24Words": "I've have copied down 24 words in the exact order",
         "continue": "CONTINUE",
         "createNewWallet": "Create New Wallet"
