--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -175,7 +175,7 @@
     },
     "liquidity": {
       "liquidityPage": {
-        "title": "Liquidity – DeFi Blockchain Client",
+        "title": "Liquidity – DeFi app",
         "yourLiquidity": "Your Liquidity",
         "yourLiquidityInfo": "You can now liquidity mine for upto 300% APY. Pick a pool pair below, supply liquidity to power the DEX (Decentralised Exchange) to start earning fees and anual returns of up to 300%. Withdraw any time.",
         "noLiquidity": "No liquidity found. Would you like to add liquidity to the pool?",
@@ -192,7 +192,7 @@
         "back": "BACK"
       },
       "liquidityInfo": {
-        "title": "Liquidity – DeFi Blockchain Client",
+        "title": "Liquidity – DeFi app",
         "addMore": "Add More",
         "remove": "Remove",
         "apy": "APY",
@@ -206,8 +206,8 @@
     },
     "swap": {
       "swapPage": {
-        "title": "Tokens – DeFi Blockchain Client",
-        "decentralisedExchange": "Decentralised Exchange",
+        "title": "DEX – DeFi app",
+        "decentralizedExchange": "Decentralized Exchange",
         "swap": "Swap",
         "pool": "Pool",
         "liquidity": "Liquidity",
@@ -300,7 +300,7 @@
     },
     "tokens": {
       "tokensPage": {
-        "title": "Tokens – DeFi Blockchain Client",
+        "title": "Tokens – DeFi app",
         "loading": "Loading...",
         "createToken": "Create",
         "tokens": "Tokens",
