Fix text case, improve error messages, etc

--- a/webapp/src/translations/languages/ru.json
+++ b/webapp/src/translations/languages/ru.json
@@ -283,7 +283,7 @@
       "dctDistribution": {
         "back": "НАЗАД",
         "add": "ДОБАВИТЬ",
-        "cancel": "CANCEL",
+        "cancel": "Cancel",
         "continue": "ПРОДОЛЖИТЬ",
         "dfiRequired": "Требуется DFI",
         "chooseFile": "ВЫБРАТЬ ФАЙЛ",
