--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -176,14 +176,14 @@
     "liquidity": {
       "liquidityPage": {
         "title": "Liquidity – DeFi app",
-        "yourLiquidity": "Your Liquidity",
+        "yourLiquidity": "Your liquidity",
         "yourLiquidityInfo": "You can now liquidity mine for upto 300% APY. Pick a pool pair below, supply liquidity to power the DEX (decentralized Exchange) to start earning fees and anual returns of up to 300%. Withdraw any time.",
         "noLiquidity": "No liquidity found. Would you like to add liquidity to the pool?",
-        "loading": "Loading...",
-        "watchVideo": "Watch Video",
-        "addLiquidity": "ADD LIQUIDITY",
-        "availablePoolPairs": "Available Pool Pairs",
-        "noPoolPairs": "No Pool Pairs",
+        "loading": "Loading…",
+        "watchVideo": "Watch video",
+
+        "availablePoolPairs": "Available pool pairs",
+        "noPoolPairs": "No pool pairs",
         "pair": "Pair",
         "liquidity": "Liquidity",
         "liquidityPools": "Liquidity pools",
@@ -193,13 +193,13 @@
       },
       "liquidityInfo": {
         "title": "Liquidity – DeFi app",
-        "addMore": "Add More",
+        "addMore": "Add more",
         "remove": "Remove",
         "apy": "APY",
         "pooled": "Pooled",
         "pooledBTC": "Pooled BTC",
         "btcPoolShare": "BTC pool share",
-        "totalReward": "Total Reward",
+        "totalReward": "Total reward",
         "pooledDFI": "Pooled DFI",
         "dfiPoolShare": "DFI pool share"
       }
@@ -218,22 +218,22 @@
         "to": "To",
         "balance": "Balance",
         "max": "Max",
-        "selectToken": "Select a Token",
+        "selectToken": "Select a token",
         "searchToken": "Search token name or address",
         "popular": "Popular",
         "tokens": "Tokens",
         "readySwap": "Ready to swap",
         "price": "Price",
-        "minimumReceived": "Minimum Received",
-        "priceImpact": "Price Impact",
+        "minimumReceived": "Minimum received",
+        "priceImpact": "Price impact",
         "liquidityProviderFee": "Liquidity provider fee",
         "verifyTransactionSwap": "Please verify transaction and press SWAP",
-        "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by the Defi blockchain",
+        "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by the DeFi blockchain",
         "transactionComplete": "Transaction Complete",
         "goToWallet": "Go to Wallet",
         "go": "Go",
         "ok": "OK",
-        "yourLiquidity": "Your Liquidity",
+        "yourLiquidity": "Your liquidity",
         "noLiquidity": "No liquidity found. Would you like to add liquidity to the pool?",
         "add": "Add",
         "remove": "Remove",
@@ -249,8 +249,8 @@
       "poolTab": {
         "yourLiquidity": "Your liquidity",
         "noLiquidity": "No liquidity found. Would you like to add liquidity to the pool?",
-        "addLiquidity": "ADD LIQUIDITY",
-        "availablePoolPairs": "Available Pool Pairs",
+
+        "availablePoolPairs": "Available pool pairs",
         "pair": "Pair",
         "liquidity": "Liquidity",
         "volume": "Volume",
@@ -259,8 +259,8 @@
       "addLiquidity": {
         "balance": "Balance",
         "max": "Max",
-        "selectToken": "Select a Token",
-        "addLiquidity": "Add Liquidity",
+        "selectToken": "Select a token",
+
         "selectInputTokens": "Select tokens and enter amounts to swap",
         "back": "Back",
         "input": "Input",
@@ -274,37 +274,37 @@
         "continue": "Continue",
         "cancel": "Cancel",
         "supply": "Supply",
-        "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by the Defi blockchain",
+        "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by the DeFi blockchain",
         "viewOnChain": "View on chain",
         "backToPool": "Back to pool",
-        "totalPooled": "Total Pooled"
+        "totalPooled": "Total pooled"
       },
       "removeLiquidity": {
         "removeLiquidity": "Remove Liquidity",
         "enterRemoveLiquidityAmount": "Enter amount of liquidity to remove",
         "verifyTransaction": "Please verify transaction and press CONFIRM",
         "removeLiquidityAmount": "Amount of liquidity to remove",
-        "transactionSuccessMsg": "Your liquidity list will update once the transaction has been confirmed by the Defi blockchain",
+        "transactionSuccessMsg": "Your liquidity list will update once the transaction has been confirmed by the DeFi blockchain",
         "receive": "Receive",
         "cancel": "Cancel",
         "removeLiquidityPercentage": "%",
         "price": "Price",
         "none": "None",
         "all": "All",
-        "back": "BACK",
-        "continue": "CONTINUE",
+        "back": "Back",
+        "continue": "Continue",
         "confirm": "Confirm",
         "backToPool": "Back to pool",
-        "receiveAddress": "Receive Address"
+        "receiveAddress": "Receive address"
       }
     },
     "tokens": {
       "tokensPage": {
         "title": "Tokens – DeFi app",
-        "loading": "Loading...",
+        "loading": "Loading…",
         "createToken": "Create",
         "tokens": "Tokens",
-        "searchTokens": "Search Tokens",
+        "searchTokens": "Search tokens",
         "dat": "DAT",
         "dct": "DCT",
         "paginationRange": "%{from} – %{to} of %{total} tokens",
@@ -312,18 +312,18 @@
           "type": "Type",
           "price": "Price",
           "volume": "Volume (24H)",
-          "marketCap": "Market Cap",
+          "marketCap": "Market cap",
           "holders": "Holders",
           "decimal": "Decimal",
           "limit": "Limit",
-          "mintingSupport": "Minting Support",
+          "mintingSupport": "Minting support",
           "tradeable": "Tradeable"
         },
         "dctLabels": {
           "id": "ID",
           "totalInitialSupply": "Total initial supply",
           "finalSupplyLimit": "Final supply limit",
-          "mintingSupport": "Minting Support",
+          "mintingSupport": "Minting support",
           "tradeable": "Tradeable",
           "type": "Type",
           "decimal": "Decimal",
@@ -331,12 +331,12 @@
         }
       },
       "createToken": {
-        "back": "BACK",
+        "back": "Back",
         "yes": "Yes",
         "no": "No",
-        "cancel": "CANCEL",
-        "continue": "CONTINUE",
-        "createTitle": "Create Token",
+        "cancel": "Cancel",
+        "continue": "Continue",
+        "createTitle": "Create token",
         "updateTitle": "Update DCT (DeFi Custom Token)",
         "name": "Name of token",
         "symbol": "Ticker Symbol",
@@ -351,17 +351,17 @@
         "dfiRequired": "DFI required",
         "collateralAddress": "Collateral Address",
         "collateralAddressError": "Minimum 100 DFI is required",
-        "createTokenButton": "CREATE TOKEN",
+        "createTokenButton": "Create token",
         "createConfirmationText": "Are you sure you want to create a token?",
         "updateConfirmationText": "Are you sure you want to update a token?",
-        "createTokenSuccess": "Token is Created Successfully",
-        "updateTokenSuccess": "Token is Updated Successfully",
+        "createTokenSuccess": "Token was created successfully",
+        "updateTokenSuccess": "Token was updated successfully",
         "tokenHash": "Token Hash",
-        "backToTokenPage": "Back To Token Page",
+        "backToTokenPage": "Back To token",
         "updateTokenButton": "UPDATE TOKEN"
       },
       "tokenInfo": {
-        "back": "BACK",
+        "back": "Back",
         "name": "Name",
         "symbol": "Symbol",
         "type": "Type",
@@ -370,18 +370,18 @@
         "decimals": "Decimals",
         "holders": "Holders",
         "limit": "Limit",
-        "minitingSupport": "Minting Support",
+        "minitingSupport": "Minting support",
         "tradeable": "Trade-able?",
-        "marketCap": "Market Cap",
-        "volume": "Volume (24 H)",
+        "marketCap": "Market cap",
+        "volume": "Volume (24H)",
         "officialSite": "Official site",
         "transfers": "Transfers",
         "holders": "Holders",
         "info": "Info",
         "exchange": "Exchange",
         "dex": "DEX",
-        "readContract": "Read Contract",
-        "writeContract": "Write Contract",
+        "readContract": "Read contract",
+        "writeContract": "Write contract",
         "analysis": "Analysis",
         "comments": "Comments",
         "noButtonText": "Cancel",
@@ -389,36 +389,36 @@
         "successText": "Success",
         "backToTokenPage": "Back to Token Page",
         "confirmation": "Are you sure you want to destroy a token?",
-        "deleteToken": "Delete Token",
-        "editToken": "Edit Token",
+        "deleteToken": "Delete token",
+        "editToken": "Edit token",
         "mint": "Mint",
         "notMintedAlert": "You have not minted the token",
         "mint": "Mint"
       },
       "mintToken": {
         "title": "Mint",
-        "back": "BACK",
-        "amountToMint": "Amount to Mint",
+        "back": "Back",
+        "amountToMint": "Amount to mint",
         "amount": "Amount",
         "cancel": "Cancel",
         "continue": "continue",
         "pleaseVerifyAmount": "Please Verify Amount",
         "completeMint": "Complete Mint",
         "transactionSuccessMsg": "The transaction was a success. Your token balance will update once the transaction has been confirmed by the DeFi Blockchain.",
-        "backToToken": "Back to Tokens"
+        "backToToken": "Back to tokens"
       },
       "transfersList": {
-        "txnHash": "Txn Hash",
+        "txnHash": "Txn hash",
         "age": "Age",
         "from": "From",
         "to": "To",
         "amount": "Amount"
       },
       "dctDistribution": {
-        "back": "BACK",
-        "add": "ADD",
-        "cancel": "CANCEL",
-        "continue": "CONTINUE",
+        "back": "Back",
+        "add": "Add",
+        "cancel": "Cancel",
+        "continue": "Continue",
         "dfiRequired": "DFI required",
         "chooseFile": "CHOOSE FILE",
         "dctDistribution": "DCT Distribution",
@@ -481,17 +481,17 @@
         "walletSyncNotice": "You will be able to create or restore a wallet when sync is complete"
       },
       "createNewWalletPage": {
-        "back": "BACK",
+        "back": "Back",
         "title": "Wallet - Create a new wallet",
         "createANewWallet": "Create a new wallet",
         "mnemonicGuideline": "Write down the following 24 words below. It is important to write them down in the exact order as displayed. This 24 - word mnemonic seed will be used to recover or transfer your wallet. Without it, you will not be able to recover your wallet. Don't lose it.",
         "generateNewSet": "Generate a new set of 24 words",
         "copied24Words": "I've have copied down 24 words in the exact order",
-        "continue": "CONTINUE",
+        "continue": "Continue",
         "createNewWallet": "Create New Wallet"
       },
       "verifyMnemonicPage": {
-        "back": "BACK",
+        "back": "Back",
         "title": "Wallet - Verify mnemonic seed",
         "verifyMnemonicSeed": "Verify mnemonic seed",
         "verifyMnemonicGuideline": "To ensure you have written down your 24-word mnemonic seed, please pick out 6 of the words in your mnemonic seed, in the list below.",
@@ -500,7 +500,7 @@
         "backToWalletPage": "CLOSE"
       },
       "restoreWalletPage": {
-        "back": "BACK",
+        "back": "Back",
         "title": "Wallet - Restore wallet",
         "restoreWallet": "Restore wallet",
         "restoreWalletGuideLine": "Enter the 24 words in your mnemonic seed to restore wallet.",
@@ -542,14 +542,14 @@
         "cancel": "Annuler",
         "continue": "Continuer",
         "receive": "Receive",
-        "newAddressButton": "New Address",
+        "newAddressButton": "New address",
         "addressLabel": "Address label",
         "createNewAddressNotice": "Give your new DFI address a meaningful label",
         "createNewReceiveAddressLabel": "Create new receive address",
         "backButton": "back",
         "createButton": "Create",
-        "legacyAddress": "Legacy Address",
-        "addressType": "Address Type"
+        "legacyAddress": "Legacy address",
+        "addressType": "Address type"
       },
       "paymentRequests": {
         "time": "Date",
@@ -662,24 +662,24 @@
     "backupWalletDatNotice": "Your wallet is not ready yet. Do you want to backup your wallet.dat file?",
     "yesBackupWalletNotice": "Yes",
     "noBackupWalletNotice": "No",
-    "encryptWalletNoticeTitle": "Lock Wallet",
+    "encryptWalletNoticeTitle": "Lock wallet",
     "encryptWalletNotice": "Enabling wallet locking with a passphrase is recommended for security. Enter the passphrase which you will use to unlock your wallet.",
-    "enableLocking": "ENABLE LOCKING",
+    "enableLocking": "Enable locking",
     "later": "LATER",
     "passphraseLabel": "Enter passphrase",
-    "proceed": "PROCEED",
-    "reset": "RESET",
+    "proceed": "Proceed",
+    "reset": "Reset",
     "encryptWalletSuccess": "Encrypt wallet done successfully",
     "unlockWalletSuccess": "Unlock wallet done successfully",
     "lockWalletSuccess": "Lock wallet done successfully",
     "passphraseLabelConfirm": "Confirm passphrase",
-    "confirm": "CONFIRM",
-    "cancel": "CANCEL",
-    "unlock": "UNLOCK",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
+    "unlock": "Unlock",
     "enterYourPassphrase": "Enter your passphrase",
     "walletUnlockTitle": "Welcome back",
     "walletUnlockMessage": "Enter your passphrase to unlock your wallet.",
-    "lostPassphraseMessage": "I LOST MY PASSPHRASE",
+    "lostPassphraseMessage": "I lost my passphrase",
     "saveMyBackup": "Save my backup",
     "okIHaveDoneIt": "Ok, I have done it",
     "backupWalletWarningModelHeader": "Wallet backup warning",
